# blackhole-sim

./: Cargo.toml  README.md  index.html
pkg/: blackhole_sim.d.ts  blackhole_sim.js  blackhole_sim_bg.wasm  blackhole_sim_bg.wasm.d.ts  package.json
src/: lib.rs
