[package]
name = "blackhole-sim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlUniformLocation",
    "MouseEvent",
    "WheelEvent",
    "EventTarget",
    "KeyboardEvent",
    "Performance",
    "AddEventListenerOptions",
] }

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[profile.release]
opt-level = "s"
lto = true
